--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{classicthesis}
 
-\usepackage[ukrainian, french, english]{babel}
+\usepackage[french, english]{babel}
 \usepackage{libertine}
 \usepackage{inconsolata}
 \usepackage{mathtools}
