--- a/psl-cover.sty
+++ b/psl-cover.sty
@@ -284,12 +284,12 @@
       \node[xshift=-56mm, yshift=-124mm] at (o) {
         \includegraphics[width=0.4\textwidth]{\@pslassetspath/logo-institute}
       };
-      \node[xshift=0mm, yshift=-124mm] at (o) {
-        \includegraphics[height=2.3cm]{\@pslassetspath/logo-cea}
-      };
-      \node[xshift=58mm, yshift=-124mm] at (o) {
-        \includegraphics[width=0.4\textwidth]{\@pslassetspath/logo-orano}
-      };
+      % \node[xshift=0mm, yshift=-124mm] at (o) {
+      %   \includegraphics[height=2.3cm]{\@pslassetspath/logo-cea}
+      % };
+      % \node[xshift=58mm, yshift=-124mm] at (o) {
+      %   \includegraphics[width=0.4\textwidth]{\@pslassetspath/logo-orano}
+      % };
       %% other institute logo (cotutelle)
       \if@cotutelle
       \node[xshift=65mm, yshift=125mm] at (o) {
