--- a/thesis.bib
+++ b/thesis.bib
@@ -2496,7 +2496,7 @@ for Global Competitiveness},
 	doi = {10.26434/chemrxiv-2023-71mjq-v2},
 	url = {https://doi.org/10.26434%2Fchemrxiv-2023-71mjq-v2},
 	year = 2023,
-	month = {apr},
+	month = Apr,
 	publisher = {American Chemical Society ({ACS})},
 	author = {Hyunsoo Park and Sauradeep Majumdar and Xiaoqi Zhang and Jihan Kim and Berend Smit},
 	title = {Inverse design of metal-organic frameworks for direct air capture of {CO}2 via deep reinforcement learning}
@@ -2505,7 +2505,7 @@ for Global Competitiveness},
 	doi = {10.1107/s0365110x66004298},
 	url = {https://doi.org/10.1107%2Fs0365110x66004298},
 	year = 1966,
-	month = {dec},
+	month = Dec,
 	publisher = {International Union of Crystallography ({IUCr})},
 	volume = {21},
 	number = {6},
@@ -2518,7 +2518,7 @@ for Global Competitiveness},
 	doi = {10.1021/acs.langmuir.7b01682},
 	url = {https://doi.org/10.1021/acs.langmuir.7b01682},
 	year = 2017,
-	month = {jul},
+	month = Jul,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {33},
 	number = {51},
@@ -2531,7 +2531,7 @@ for Global Competitiveness},
 	doi = {10.1021/acs.jpcc.1c05959},
 	url = {https://doi.org/10.1021/acs.jpcc.1c05959},
 	year = 2021,
-	month = {sep},
+	month = Sep,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {125},
 	number = {37},
@@ -2554,7 +2554,7 @@ for Global Competitiveness},
 	doi = {10.1021/la960495z},
 	url = {https://doi.org/10.1021%2Fla960495z},
 	year = 1996,
-	month = {jan},
+	month = Jan,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {12},
 	number = {24},
@@ -2577,7 +2577,7 @@ for Global Competitiveness},
 	doi = {10.1016/j.chemosphere.2020.127279},
 	url = {https://doi.org/10.1016%2Fj.chemosphere.2020.127279},
 	year = 2020,
-	month = {nov},
+	month = Nov,
 	publisher = {Elsevier {BV}},
 	volume = {258},
 	pages = {127279},
@@ -2633,7 +2633,7 @@ for Global Competitiveness},
 	doi = {10.1016/j.seppur.2022.120932},
 	url = {https://doi.org/10.1016%2Fj.seppur.2022.120932},
 	year = 2022,
-	month = {jun},
+	month = Jun,
 	publisher = {Elsevier {BV}},
 	volume = {291},
 	pages = {120932},
@@ -2657,7 +2657,7 @@ for Global Competitiveness},
 	doi = {10.1016/j.patter.2021.100305},
 	url = {https://doi.org/10.1016%2Fj.patter.2021.100305},
 	year = 2021,
-	month = {jul},
+	month = Jul,
 	publisher = {Elsevier {BV}},
 	volume = {2},
 	number = {7},
@@ -2670,7 +2670,7 @@ for Global Competitiveness},
 	doi = {10.1063/1.3215722},
 	url = {https://doi.org/10.1063%2F1.3215722},
 	year = 2009,
-	month = {dec},
+	month = Dec,
 	publisher = {{AIP} Publishing},
 	volume = {19},
 	number = {4},
@@ -2683,7 +2683,7 @@ for Global Competitiveness},
 	doi = {10.1016/j.micromeso.2012.07.049},
 	url = {https://doi.org/10.1016%2Fj.micromeso.2012.07.049},
 	year = 2013,
-	month = {jan},
+	month = Jan,
 	publisher = {Elsevier {BV}},
 	volume = {165},
 	pages = {32--39},
@@ -2695,7 +2695,7 @@ for Global Competitiveness},
 	doi = {10.1016/j.jhazmat.2020.122383},
 	url = {https://doi.org/10.1016%2Fj.jhazmat.2020.122383},
 	year = 2020,
-	month = {jul},
+	month = Jul,
 	publisher = {Elsevier {BV}},
 	volume = {393},
 	pages = {122383},
@@ -2707,7 +2707,7 @@ for Global Competitiveness},
 	doi = {10.1021/acs.langmuir.3c00255},
 	url = {https://doi.org/10.1021%2Facs.langmuir.3c00255},
 	year = 2023,
-	month = {may},
+	month = May,
 	publisher = {American Chemical Society ({ACS})},
 	author = {Lujun Li and Yiming Zhao and Haibin Yu and Zhuo Wang and Yongjia Zhao and Mingqi Jiang},
 	title = {An {XGBoost} Algorithm Based on Molecular Structure and Molecular Specificity Parameters for Predicting Gas Adsorption},
@@ -2779,7 +2779,7 @@ for Global Competitiveness},
 	doi = {10.1021/acs.chemmater.0c03575},
 	url = {https://doi.org/10.1021%2Facs.chemmater.0c03575},
 	year = 2020,
-	month = {nov},
+	month = Nov,
 	publisher = {American Chemical Society ({ACS})},
 	volume = {32},
 	number = {23},
@@ -2805,7 +2805,7 @@ for Global Competitiveness},
 	doi = {10.21105/joss.04200},
 	url = {https://doi.org/10.21105/joss.04200},
 	year = 2022,
-	month = {may},
+	month = May,
 	publisher = {The Open Journal},
 	volume = {7},
 	number = {73},
@@ -2865,4 +2865,209 @@ pages = {78-96},
 year = {1987},
 doi = {10.1137/0216006},
 URL = {https://doi.org/10.1137/0216006},
+}
+@article{Bousquet2012,
+  author = { Bousquet, D. and Coudert, F.-X. and Boutin, A. },
+  title = { Free energy landscapes for the thermodynamic understanding of adsorption-induced deformations and structural transitions in porous materials },
+  journal = { J. Chem. Phys. },
+  year = { 2012 },
+  volume = { 137 },
+  issue = { 4 },
+  pages = { 044118 },
+  doi = {10.1063/1.4738776},
+  url = {http://doi.org/10.1063/1.4738776},
+}
+@article{shapley1953value,
+  title={A value for {$n$}-person games},
+  author={Shapley, Lloyd S and others},
+  year={1953},
+  publisher={Princeton University Press Princeton}
+}
+@misc{molnar2020interpretable,
+  title={Interpretable machine learning},
+  author={Molnar, Christoph},
+  year={2023},
+  howpublished={Available online at \url{https://christophm.github.io/interpretable-ml-book/}}
+}
+@inproceedings{SHAP,
+ author = {Lundberg, Scott M and Lee, Su-In},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {I. Guyon and U. Von Luxburg and S. Bengio and H. Wallach and R. Fergus and S. Vishwanathan and R. Garnett},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {A Unified Approach to Interpreting Model Predictions},
+ url = {https://proceedings.neurips.cc/paper/2017/file/8a20a8621978632d76c43dfd28b67767-Paper.pdf},
+ volume = {30},
+ year = {2017}
+}
+@inproceedings{chen2016xgboost,
+ author = {Chen, Tianqi and Guestrin, Carlos},
+ title = {{XGBoost}: A Scalable Tree Boosting System},
+ booktitle = {Proceedings of the 22nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+ series = {KDD '16},
+ year = {2016},
+ isbn = {978-1-4503-4232-2},
+ location = {San Francisco, California, USA},
+ pages = {785--794},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2939672.2939785},
+ doi = {10.1145/2939672.2939785},
+ acmid = {2939785},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {large-scale machine learning},
+} 
+@article{zeopp_Willems2012,
+	doi = {10.1016/j.micromeso.2011.08.020},
+	url = {https://doi.org/10.1016/j.micromeso.2011.08.020},
+	year = 2012,
+	month = {feb},
+	publisher = {Elsevier {BV}},
+	volume = {149},
+	number = {1},
+	pages = {134--141},
+	author = {Thomas F. Willems and Chris H. Rycroft and Michaeel Kazi and Juan C. Meza and Maciej Haranczyk},
+	title = {Algorithms and tools for high-throughput geometry-based analysis of crystalline porous materials},
+	journal = {Microporous Mesoporous Mater.}
+}
+@article{Diwu_2010,
+	doi = {10.1021/ic100184q},
+	url = {https://doi.org/10.1021%2Fic100184q},
+	year = 2010,
+	month = Apr,
+	publisher = {American Chemical Society ({ACS})},
+	volume = {49},
+	number = {7},
+	pages = {3337--3342},
+	author = {Juan Diwu and Anna-Gay D. Nelson and Shuao Wang and Charles F. Campana and Thomas E. Albrecht-Schmitt},
+	title = {Comparisons of Pu({IV}) and Ce({IV}) Diphosphonates},
+	journal = {Inorg. Chem.}
+}
+@article{Martin_2017,
+	doi = {10.1021/acs.inorgchem.6b02962},
+	url = {https://doi.org/10.1021%2Facs.inorgchem.6b02962},
+	year = 2017,
+	month = {feb},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {56},
+	number = {5},
+	pages = {2902--2913},
+	author = {Nicolas P. Martin and Juliane März and Christophe Volkringer and Natacha Henry and Christoph Hennig and Atsushi Ikeda-Ohno and Thierry Loiseau},
+	title = {Synthesis of Coordination Polymers of Tetravalent Actinides (Uranium and Neptunium) with a Phthalate or Mellitate Ligand in an Aqueous Medium},
+	journal = {Inorg. Chem.}
+}
+@article{Jouffret_2011,
+	doi = {10.1021/ic200345j},
+	url = {https://doi.org/10.1021%2Fic200345j},
+	year = 2011,
+	month = Apr,
+	publisher = {American Chemical Society ({ACS})},
+	volume = {50},
+	number = {10},
+	pages = {4619--4626},
+	author = {Laurent Jouffret and Murielle Rivenet and Francis Abraham},
+	title = {Linear Alkyl Diamine-Uranium-Phosphate Systems: U({VI}) to U({IV}) Reduction with Ethylenediamine},
+	journal = {Inorg. Chem.}
+}
+@article{Liang_2016,
+	doi = {10.1016/j.jssc.2016.07.026},
+	url = {https://doi.org/10.1016%2Fj.jssc.2016.07.026},
+	year = 2016,
+	month = Nov,
+	publisher = {Elsevier {BV}},
+	volume = {243},
+	pages = {50--56},
+	author = {Lingling Liang and Ronglan Zhang and Jianshe Zhao and Chiyang Liu and Ng Seik Weng},
+	title = {Two actinide-organic frameworks constructed by a tripodal flexible ligand: Occurrence of infinite \{(UO$_2$O$_2$(OH)$_3$\}$_{4n}$ and hexanuclear \{Th$_6$O$_4$(OH)$_4$\} motifs},
+	journal = {J. Solid State Chem.}
+}
+@article{Fanourgakis_2020,
+	doi = {10.1021/jacs.9b11084},
+	url = {https://doi.org/10.1021/jacs.9b11084},
+	year = 2020,
+	month = {feb},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {142},
+	number = {8},
+	pages = {3814--3822},
+	author = {George S. Fanourgakis and Konstantinos Gkagkas and Emmanuel Tylianakis and George E. Froudakis},
+	title = {A Universal Machine Learning Algorithm for Large-Scale Screening of Materials},
+	journal = {J. Am. Chem. Soc.}
+}  
+@article{Pardakhti_2020,
+	doi = {10.1021/acs.jpcc.9b09319},
+	url = {https://doi.org/10.1021/acs.jpcc.9b09319},
+	year = 2020,
+	month = Jan,
+	publisher = {American Chemical Society ({ACS})},
+	volume = {124},
+	number = {8},
+	pages = {4534--4544},
+	author = {Maryam Pardakhti and Pariksheet Nanda and Ranjan Srivastava},
+	title = {Impact of Chemical Features on Methane Adsorption by Porous Materials at Varying Pressures},
+	journal = {J. Phys. Chem. C}
+}
+@article{poresize_Pinheiro2013,
+	doi = {10.1016/j.jmgm.2013.05.007},
+	url = {https://doi.org/10.1016/j.jmgm.2013.05.007},
+	year = 2013,
+	month = Jul,
+	publisher = {Elsevier {BV}},
+	volume = {44},
+	pages = {208--219},
+	author = {Marielle Pinheiro and Richard L. Martin and Chris H. Rycroft and Andrew Jones and Enrique Iglesia and Maciej Haranczyk},
+	title = {Characterization and comparison of pore landscapes in crystalline porous materials},
+	journal = {J. Mol. Graph. Model.}
+}
+@article{Tarba_2022,
+	doi = {10.3390/math10071042},
+	url = {https://doi.org/10.3390/math10071042},
+	year = 2022,
+	month = Mar,
+	publisher = {{MDPI} {AG}},
+	volume = {10},
+	number = {7},
+	pages = {1042},
+	author = {Nicolae Tarb{\u{a}} and Mihai-Lucian Voncil{\u{a}} and Costin-Anton Boiangiu},
+	title = {On Generalizing Sarle's Bimodality Coefficient as a Path towards a Newly Composite Bimodality Coefficient},
+	journal = {Mathematics}
+}
+@article{neffposci_Laakso1979,
+	doi = {10.1177/001041407901200101},
+	url = {https://doi.org/10.1177/001041407901200101},
+	year = 1979,
+	month = Apr,
+	publisher = {{SAGE} Publications},
+	volume = {12},
+	number = {1},
+	pages = {3--27},
+	author = {Markku Laakso and Rein Taagepera},
+	title = {{\textquotedblleft}Effective{\textquotedblright} Number of Parties},
+	journal = {Comparative Political Studies}
+}
+@article{neffbio_Simpson1949,
+	doi = {10.1038/163688a0},
+	url = {https://doi.org/10.1038/163688a0},
+	year = 1949,
+	month = Apr,
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {163},
+	number = {4148},
+	pages = {688--688},
+	author = {E. H. Simpson},
+	title = {Measurement of Diversity},
+	journal = {Nature}
+}
+@article{neffphys_Kramer1993,
+	doi = {10.1088/0034-4885/56/12/001},
+	url = {https://doi.org/10.1088/0034-4885/56/12/001},
+	year = 1993,
+	month = Dec,
+	publisher = {{IOP} Publishing},
+	volume = {56},
+	number = {12},
+	pages = {1469--1564},
+	author = {B Kramer and A MacKinnon},
+	title = {Localization: theory and experiment},
+	journal = {Rep. Prog. Phys.}
 }
