--- a/3-fastsim.tex
+++ b/3-fastsim.tex
@@ -28,7 +28,7 @@ The set of all these 3D polyhedral subspaces $S_{k}$ is then called the Voronoi 
   \includegraphics[width=0.32\textwidth]{figures/3-fastsim/voronoi.jpg}
   \includegraphics[width=0.32\textwidth]{figures/3-fastsim/voronoi_apollonian.jpg}
   \includegraphics[width=0.32\textwidth]{figures/3-fastsim/voronoi_radical.jpg}
-  \caption{Bidimensional illustrations of a Voronoi decomposition using three types of algorithm: (1) for equally sized circles using the equation~\ref{eq:voronoi_partition} (\url{www.shadertoy.com/view/MslGD8}) (2) for unequally sized circles using the Apollonian Voronoi decomposition condition~\ref{eq:r_voronoi_apollonian} (\url{www.shadertoy.com/view/4sd3D7}) and (3) another alforithm for unequally sized circles using the radical Voronoi condition~\ref{eq:r_voronoi_radical} (\url{www.shadertoy.com/view/4tV3z3}). Note that the second picture shows the curved boundaries between the Voronoi cells, while the switch to the radical Voronoi decomposition gives straight line boundaries.}\label{fgr:voronoi_illustration}
+  \caption{Bidimensional illustrations of a Voronoi decomposition using three types of algorithm: (i) for equally sized circles using the equation~\ref{eq:voronoi_partition} (\url{www.shadertoy.com/view/MslGD8}) (ii) for unequally sized circles using the Apollonian Voronoi decomposition condition~\ref{eq:r_voronoi_apollonian} (\url{www.shadertoy.com/view/4sd3D7}) and (iii) another alforithm for unequally sized circles using the radical Voronoi condition~\ref{eq:r_voronoi_radical} (\url{www.shadertoy.com/view/4tV3z3}). Note that the second picture shows the curved boundaries between the Voronoi cells, while the switch to the radical Voronoi decomposition gives straight line boundaries.}\label{fgr:voronoi_illustration}
 \end{figure}
 
 This regular Voronoi tessellation can only be used to separate the space for equally sized atoms because it sets the boundaries at equidistance of all the surrounding atoms, as we can see on the Figure~\ref{fgr:voronoi_illustration}. For unequally sized atoms, this type of definition could be undesired since the boundary can be closer to the surface of an atom than of another. The initial thought behind using a Voronoi decomposition is based on delimiting a region for each atom that is closer to this atom than any other one. The ambiguity of this definition relies on the definition of ``closeness''. In this regular Voronoi decompostion, we define the closeness using the distance between the center of mass of the different atoms, which is problematic for unequally distributed radii.
@@ -69,7 +69,7 @@ Starting from the initial idea of Voronoi sampling, we want to question the rele
 
 \subsection{Comparative study of the Voronoi sampling}
 
-We introduced in the previous chapter, the definition of the xenon adsorption enthalpy at infinite dilution (Widom insertion section~\ref{{sct:widom}}) and at ambient pressure (GCMC sections~\ref{sct:GCMC} and~\ref{sct:thermo}). These methods can be considered accurate methods to calculate the adsorption enthalpy which has been proven to be strongly correlated to the logarithm of the selectivity in our previous study on the thermodynamic exploration of the xenon/krypton separation using a high-throughput screening.
+We introduced in the previous chapter, the definition of the xenon adsorption enthalpy at infinite dilution (Widom insertion section~\ref{sct:widom}) and at ambient pressure (GCMC sections~\ref{sct:GCMC} and~\ref{sct:thermo}). These methods can be considered accurate methods to calculate the adsorption enthalpy which has been proven to be strongly correlated to the logarithm of the selectivity in our previous study on the thermodynamic exploration of the xenon/krypton separation using a high-throughput screening.
 
 \subsubsection{Introduction of the main concepts}
 
@@ -145,7 +145,7 @@ This preliminary study identified a fast method for adsorption enthalpy calculat
 
 \section{Rapid Adsorption Enthalpy Surface Sampling (RAESS)}
 
-In this section, we describe the development of our surface sampling algorithm, with the goal of being more accurate than Voronoi sampling and faster than Widom insertion. Our initial idea is based on a series of theoretical considerations: (1) the strong adsorption sites are near the surface of the material; (2) by changing the problem from 3D to 2D sampling we can reduce the complexity; and (3) the algorithm can scale with the number of unique atoms in the structure (and not with the size of the unit cell), which is efficient because many porous frameworks have high symmetry. The first consideration ensures that this method will be more accurate than a Voronoi sampling, and the last two made us think that a well-optimized code would be fast. To confirm these hypotheses, we will analyze both the accuracy and the speed of this new algorithm and compare them to existing methods.
+In this section, we describe the development of our surface sampling algorithm, with the goal of being more accurate than Voronoi sampling and faster than Widom insertion. Our initial idea is based on a series of theoretical considerations: (i) the strong adsorption sites are near the surface of the material; (ii) by changing the problem from 3D to 2D sampling we can reduce the complexity; and (iii) the algorithm can scale with the number of unique atoms in the structure (and not with the size of the unit cell), which is efficient because many porous frameworks have high symmetry. The first consideration ensures that this method will be more accurate than a Voronoi sampling, and the last two made us think that a well-optimized code would be fast. To confirm these hypotheses, we will analyze both the accuracy and the speed of this new algorithm and compare them to existing methods.
 
 \subsection{Initial Implementation}
 
@@ -227,7 +227,7 @@ For the simulations considered in Figure~\ref{fgr:rejection}, the use of a rejec
 
 \subsubsection{Performance comparison}
 
-For the calculation of adsorption enthalpy, our proposed surface sampling method is a good compromise between the accuracy of Widom insertion (full sampling of the porous space) and the speed of a less accurate method such as Voronoi sampling. The performance of our algorithm, including the two new features (sampling sphere scaling and rejection criterion) is illustrated in Figure~\ref{fgr:sumup}, where we can see the improvement brought by each feature and how it compares to reference simulations. All CPU times are calculated using the smallest possible number of sampling points so that the respective algorithms reach convergence. With the implementation of a rejection condition, we find that surface sampling is even quicker than Voronoi sampling. Moreover, the increase of the size of the sampling sphere makes the surface sampling much more accurate, reaching an RMSE of \SI{0.33}{\kilo\joule\per\mole} {and an MAE of \SI{0.21}{\kilo\joule\per\mole}}. The ideal set of parameters, determined for porous materials from the CoRE MOF 2019 database, is $(\lambda = 1.6, \mu = 0.85)$ in order to combine the lowest error and smallest computational cost. By combining both of these new features to the algorithm, we have a final surface sampling method with an RMSE of \SI{0.33}{\kilo\joule\per\mole} and an average computation time of \SI{0.34}{\second} per structure. According to the data of the Table~\ref{tab:sumup}, it is about 6 times more accurate and {$26$\%} faster than Voronoi sampling, and it is also about 430 times faster than a Widom insertion with 12k cycles.
+For the calculation of adsorption enthalpy, our proposed surface sampling method is a good compromise between the accuracy of Widom insertion (full sampling of the porous space) and the speed of a less accurate method such as Voronoi sampling. The performance of our algorithm, including the two new features (sampling sphere scaling and rejection criterion) is illustrated in Figure~\ref{fgr:sumup}, where we can see the improvement brought by each feature and how it compares to reference simulations. All CPU times are calculated using the smallest possible number of sampling points so that the respective algorithms reach convergence. With the implementation of a rejection condition, we find that surface sampling is even quicker than Voronoi sampling. Moreover, the increase of the size of the sampling sphere makes the surface sampling much more accurate, reaching an RMSE of \SI{0.33}{\kilo\joule\per\mole} {and an MAE of \SI{0.21}{\kilo\joule\per\mole}}. The ideal set of parameters, determined for porous materials from the CoRE MOF 2019 database, is $(\lambda = 1.6, \mu = 0.85)$ in order to combine the lowest error and smallest computational cost. By combining both of these new features to the algorithm, we have a final surface sampling method with an RMSE of \SI{0.33}{\kilo\joule\per\mole} and an average computation time of \SI{0.34}{\second} per structure. According to the data represented in Figure~\ref{fgr:sumup}, it is about 6 times more accurate and {$26$\%} faster than Voronoi sampling, and it is also about 430 times faster than a Widom insertion with 12k cycles.
 
 \begin{figure}[ht]
   \centering
@@ -263,7 +263,7 @@ Finally, we suggest that the values of the parameters optimized in this work mig
 
 \subsubsection{Calculation of Henry constant and surface area}
 
-The main goal of our sampling algorithm is to calculate adsorption enthalpy in the zero-loading limit. But the method can also calculate at the same time the Henry constant and surface area of the materials, without significant additional computational cost. The Henry constant is a key metric for assessing the affinity of an adsorbate to a nanoporous structure. The Xe/Kr gas selectivity at low pressure is defined as a ratio of Henry constants of Xe and Kr. This important property can be calculated using Equation~\ref{eqn:eq_cst} in a Widom insertion calculation. Instead of using the interaction energies at the Widom inserted points, we can now use the surface sampled points to get an approximate value for the Henry constant.
+The main goal of our sampling algorithm is to calculate adsorption enthalpy in the zero-loading limit. But the method can also calculate at the same time the Henry constant and surface area of the materials, without significant additional computational cost. The Henry constant is a key metric for assessing the affinity of an adsorbate to a nanoporous structure. The Xe/Kr gas selectivity at low pressure is defined as a ratio of Henry constants of Xe and Kr. This important property can be calculated using Equation~\ref{eq:eq_cst} in a Widom insertion calculation. Instead of using the interaction energies at the Widom inserted points, we can now use the surface sampled points to get an approximate value for the Henry constant.
 
 \begin{figure}[ht]
   \centering
@@ -376,25 +376,25 @@ To further extend the possible uses cases of the RAESS algorithm, we tested our 
 The Table~\ref{tab:amorphous} gives the values of the adsorption enthalpies and the Henry constants of a few amorphous materials as well as the time they took to be computed. The sheer amount of atoms in each structure makes the CPU time required much higher than for the crystalline structures of CoRE MOF 2019. The time required are however quite manageable in a hypothetical screening procedure. If we consider all the 175 structures that could be calculated by our methods, the average time required is about \SI{75}{\second} per structure. 
 
 \begin{table}[hb]
-\begin{tabular}{|l|r|r|r|}
-\hline
- Structure Name & $\Delta\e{ads}H\e{0}\ex{Xe}$ (\SI{}{\kilo\joule\per\mole}) & $K\e{H}\ex{Xe}$ (\SI{}{\mole\per\kilo\gram\per\pascal}) & CPU time (s) \\
-\hline
-aCarbon-Marks-id035 &                 -63.55 &            6.98e-01 & 285.45 \\
-HCP-Colina-id016 &                 -30.61 &            8.85e-05 & 3.88 \\
-Kerogen-Coasne-id010 &                 -44.38 &            8.02e-03 & 61.2 \\
-PIM-Colina-id012 &                 -26.39 &            7.00e-05 & 8.86 \\
-\hline
-\end{tabular}
-\caption{Some amorphous materials' performance according to the RAESS algorithm. The results on the whole amorphous database is given in CSV format on the Github: \url{github.com/fxcoudert/citable-data/tree/master/154-Ren_ChemSci_2023}.}\label{tab:amorphous}
+  \begin{tabular}{|l|r|r|r|}
+    \hline
+    Structure Name & $\Delta\e{ads}H\e{0}\ex{Xe}$ (\SI{}{\kilo\joule\per\mole}) & $K\e{H}\ex{Xe}$ (\SI{}{\mole\per\kilo\gram\per\pascal}) & CPU time (s) \\
+    \hline
+    aCarbon-Marks-id035 &                 -63.55 &            6.98e-01 & 285.45 \\
+    HCP-Colina-id016 &                 -30.61 &            8.85e-05 & 3.88 \\
+    Kerogen-Coasne-id010 &                 -44.38 &            8.02e-03 & 61.2 \\
+    PIM-Colina-id012 &                 -26.39 &            7.00e-05 & 8.86 \\
+    \hline
+    \end{tabular}
+    \caption{Some amorphous materials' performance according to the RAESS algorithm. The results on the whole amorphous database is given in CSV format on the Github: \url{github.com/fxcoudert/citable-data/tree/master/154-Ren_ChemSci_2023}.}\label{tab:amorphous}
 \end{table}
 
 As we can see on the Figure~\ref{fgr:amorphous}, the accuracy of the surface sampling is rather high since by comparing it to an unbiased grid-based sampling, we obtain very similar results. The RMSE is about \SI{0.83}{\kJ\per\mol}, which is higher than the one for CoRE MOF structures. This method could very likely be used to evaluate amorphous materials as a fast screening tool especially since the computation time required by the optimized grid sampling is about \SI{623}{\second}. The dimension reduction inherent to the surface sampling makes it one order of magnitude faster than conventional techniques.
 
 \begin{figure}[ht]
   \centering
-    \includegraphics[width=0.5\linewidth]{figures/3-fastsim/amorphous_enthalpy.pdf}
-    \caption{Scatterplot comparison of the xenon adsorption enthalpy calculated by the RAESS algorithm and the one calculated by a grid sampling (presented in the next section) on a database of porous rigid amorphous materials~\cite{Thyagarajan_2020}. Raspa simulations could not be run on this database. Only the 175 structures computed by both methods are presented here. }\label{fgr:amorphous}
+  \includegraphics[width=0.5\linewidth]{figures/3-fastsim/amorphous_enthalpy.pdf}
+  \caption{Scatterplot comparison of the xenon adsorption enthalpy calculated by the RAESS algorithm and the one calculated by a grid sampling (presented in the next section) on a database of porous rigid amorphous materials~\cite{Thyagarajan_2020}. Raspa simulations could not be run on this database. Only the 175 structures computed by both methods are presented here. }\label{fgr:amorphous}
 \end{figure}
 
 \subsection{Perspectives of surface sampling}
@@ -412,7 +412,7 @@ Finally, although the algorithm in its present form can already be applied in a 
 
 \subsection{Implementation of the Algorithm}
 
-To build more relevant energy descriptors, we will now go back to the definitions of the adsorption enthalpy and the Henry constant (equation~\ref{eq:ads_enthalpy} and~\ref{eqn:henry}) that call for a homogeneous sampling of the adsorption space. The easiest way of sampling consists in laying a grid in the 3D space. This method is however known to be the most time-consuming on in theory. Inspired by our work on surface sampling, we designed an approach based on a symmetry-respecting grid,generated using the algorithms of the Gemmi Project,\cite{Wojdyr_2022} where the points overlapping with framework are discarded. These new features coupled with a grid sampling makes the calculation of adsorption energies much less time-consuming while being very accurate.
+To build more relevant energy descriptors, we will now go back to the definitions of the adsorption enthalpy and the Henry constant (equation~\ref{eq:ads_enthalpy} and~\ref{eq:henry}) that call for a homogeneous sampling of the adsorption space. The easiest way of sampling consists in laying a grid in the 3D space. This method is however known to be the most time-consuming on in theory. Inspired by our work on surface sampling, we designed an approach based on a symmetry-respecting grid,generated using the algorithms of the Gemmi Project,\cite{Wojdyr_2022} where the points overlapping with framework are discarded. These new features coupled with a grid sampling makes the calculation of adsorption energies much less time-consuming while being very accurate.
 
 \begin{figure}[ht]
   \centering
@@ -458,7 +458,7 @@ As we can see of the Figure~\ref{fgr:grid_widom}, the approach does not damage t
 \begin{figure}[ht]
   \centering
     \includegraphics[width=0.48\textwidth]{figures/3-fastsim/H_Xe_widom_vs_H_Xe_grid_overview.jpg}
-    \includegraphics[width=0.48\textwidth]{figures/3-fastsim/H_Xe_widom_vs_H_Xe_grid_overview.jpg}
+    \includegraphics[width=0.48\textwidth]{figures/3-fastsim/K_Xe_widom_vs_K_Xe_grid_overview.jpg}
     \caption{Comparison of the adsorption enthalpies (left) and the Henry constants calculated by the optimized grid energy sampling (for a \SI{0.1}{\angstrom} spacing, a rejection parameter $\mu=0.8$ and an energy threshold $E\e{th}$ of \SI{100}{\kilo\joule\per\mole}) and by the Widom insertion of RASPA with 100,000 cycles. \todo{add henry}}\label{fgr:grid_widom}
 \end{figure}
 
@@ -491,16 +491,13 @@ In this section we show figures that support the use of higher temperature avera
 \centering
   \includegraphics[width=0.48\linewidth]{figures/4-ml/SI_figure/Scatterplot_H1_H0.pdf}
   \includegraphics[width=0.48\linewidth]{figures/4-ml/SI_figure/Scatterplot_H1_H900K.pdf}
-  \caption{Scatter plots }
-  \label{fgr:H_900K}
-  \caption{Scatterplots of the low-pressure xenon adsorption enthalpy at \SI{298}{\kelvin} and at \SI{298}{\kelvin} against the ambient-pressure xenon adsorption enthalpy at \SI{298}{\kelvin}. Using a higher temperature Boltzmann averaging, the correlation with the ambient-pressure case we are interested in is much higher, the R2 coefficient improves from $0.80$ to $0.92$ for instance. The RMSE also decreased from \SI{2.87}{\kilo\joule\per\mole} to \SI{1.76}{\kilo\joule\per\mole}. }
+  \caption{Scatterplots of the low-pressure xenon adsorption enthalpy at \SI{298}{\kelvin} (left) and at \SI{900}{\kelvin} (right) calculated by the GrAED algorithm against the ambient-pressure xenon adsorption enthalpy at \SI{298}{\kelvin}. Using a higher temperature Boltzmann averaging, the correlation with the ambient-pressure case of interest is much higher, the R2 coefficient improves from $0.80$ to $0.92$ for instance. The RMSE also decreased from \SI{2.87}{\kilo\joule\per\mole} to \SI{1.76}{\kilo\joule\per\mole}. }\label{fgr:H_900K}
 \end{figure}
 
 \begin{figure}[ht]
 \centering
   \includegraphics[width=0.70\linewidth]{figures/4-ml/SI_figure/Scatterplot_G1_G900K.pdf}
-  \caption{Scatter plots }
-  \label{fgr:G_900K}
+  \caption{Comparison plot between the low-pressure exchange free energy at \SI{900}{\kelvin} calculated by the GrAED algorithm and the ambient-pressure exchange free energy at \SI{298}{\kelvin} calculated by Widom insertion. }\label{fgr:G_900K}
 \end{figure}
 
 \subsubsection{Statistical characterization}
